--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     ]
   },
   "dependencies": {
+    "date-fns": "^2.22.1",
     "fathom-client": "^3.0.0",
+    "isomorphic-fetch": "^3.0.0",
+    "mongoose": "^5.12.13",
     "next": "^10.2.3",
     "next-seo": "^4.24.0",
     "react": "^17.0.2",
