--- a/package.json
+++ b/package.json
@@ -26,22 +26,23 @@
   "dependencies": {
     "cors": "^2.8.5",
     "date-fns": "^2.22.1",
+    "eslint-config-next": "^13.4.19",
     "fathom-client": "^3.0.0",
     "isomorphic-fetch": "^3.0.0",
     "mongoose": "^5.12.13",
-    "next": "^12.2.5",
+    "next": "^13.4.19",
     "next-seo": "^4.24.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.4",
     "@babel/eslint-plugin": "^7.13.16",
     "@types/isomorphic-fetch": "^0.0.36",
-    "@types/node": "^15.12.1",
-    "@types/react": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@types/node": "^20.5.9",
+    "@types/react": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
@@ -49,6 +50,6 @@
     "husky": "^4.3.8",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.1",
-    "typescript": "^4.3.2"
+    "typescript": "^5.2.2"
   }
 }
